# tfg

./: .editorconfig  .gitignore  .markdownlint-cli2.yaml  .mise.toml  .pre-commit-config.yaml  .python-version  .terraform-version  .tool-versions  .trivyignore.yaml  .yamllint.yaml  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  REUSE.toml  Taskfile.yaml  Taskfile.yml  mkdocs.yaml  pyproject.toml  requirements-app.in  requirements-app.in.txt  requirements-dev.in  requirements-dev.in.txt  requirements-dev.txt  requirements-developer.txt  requirements-developer.txt.license  requirements-linux-developer.txt  requirements-linux.txt  requirements-test.in  requirements-test.in.txt  requirements.txt  test_tfg.py  tfg.py  trivy.yaml
.devcontainer/: devcontainer.dockerfile  devcontainer.env  devcontainer.json  devcontainer.json.license
.python-requirements/: docs.in  linting.in  release.in  testing.in
.reuse/: dep5
data/terraform1/stacks/definitions/example1/: README.md
data/terraform1/stacks/environments/dev/: example1.tfvars
data/terraform1/stacks/environments/test/: backend.json
data/terraform1/stacks/modules/example1/: README.md
data/terraform1/stacks/modules/template/: README.md
docs/: api.md  contributing.md  index.md  license.md
src/tfg/: __init__.py  __main__.py  app.py  cli.py  config.py  context.py  log_util.py  runner.py  settings.py
tasks/console/: README.md
tasks/console/containers/: Taskfile.yaml
tasks/console/mkdocs/: Taskfile.yaml
tasks/console/pip-tools/: Taskfile.yaml
tasks/console/pre-commit/: Taskfile.yaml
tasks/console/project/: Taskfile.yaml
tasks/console/pytest/: Taskfile.yaml
tasks/console/ruff/: Taskfile.yaml
tasks/console/uv/: Taskfile.yaml
tasks/headless/: README.md
tasks/project/: Taskfile.yml
tasks/python/: Taskfile.yaml  Taskfile.yml
tasks/python-developer/: Taskfile.yaml
tasks/uv/: Taskfile.yml
tasks/uv-developer/: Taskfile.yaml  Taskfile.yml
terraform1/stacks/definitions/example1/: README.md
terraform1/stacks/environments/dev/: backend.json  example1.tfvars
terraform1/stacks/environments/prod/: backend.json
terraform1/stacks/modules/example1/: README.md
tests/: __init__.py  test_app.py  test_cli.py
