# SPDX-FileCopyrightText: 2024-present Stuart Ellis <stuart@stuartellis.name>
#
# SPDX-License-Identifier: MIT
#

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tfg"
version = "0.1.0"
description = "Generates commands for Terraform and OpenTofu"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = []
authors = [
  { name = "Stuart Ellis", email = "stuart@stuartellis.name" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/stuartellis/tfg#readme"
Issues = "https://github.com/stuartellis/tfg/issues"
Source = "https://github.com/stuartellis/tfg"

[tool.mypy]
disallow_untyped_defs = true
follow_imports = "normal"
pretty = true
show_column_numbers = true
warn_no_return = false
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pip-tools]
allow_unsafe = true # Default behavior in future pip-tools releases
generate_hashes = true
strip_extras = true # Default behavior in future pip-tools releases

[tool.ruff]
src = ["src", "tests"]
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4

target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = ["ALL"]
# Disable some rules for compatibility with ruff formatter:
# https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
ignore = ["COM812", "COM819", "D206", "D212", "D300", "E111", "E114", "E117", "ISC001", "ISC002", "Q000", "Q001", "Q002", "Q003", "T201", "W191"]
unfixable = [
    "T201",
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"./tests/*.py" = [
    "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
