# SPDX-FileCopyrightText: 2024-present Stuart Ellis <stuart@stuartellis.name>
#
# SPDX-License-Identifier: MIT
#

[project]
name = "tfg"
description = "A little application that generates TF commands"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = []
authors = [
  { name = "Stuart Ellis", email = "stuart@stuartellis.name" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]

## Dependencies ##

dependencies = []

[project.optional-dependencies]
docs = [
  "mkdocs~=1.6.0",
  "mkdocstrings~=0.25.0",
  "mkdocstrings-python~=1.10.0",
  "pymdown-extensions~=10.8.0",
]

lint = [
  "mypy~=1.11.0",
  "ruff~=0.6.0",
]

release = [
  "build~=1.2.1",
  "setuptools_scm~=8.1.0",
]

reqs-utilities = [
  "pip-tools~=7.4.0",
]

testing = [
  "pytest~=8.2.0",
  "pytest-cov~=5.0.0",
  "pytest-randomly~=3.0.0",
]

## Command-line Interfaces ##

[project.scripts]
tfg = "tfg.cli:cli"

## URLs ##

[project.urls]
Documentation = "https://github.com/stuartellis/tfg#readme"
Issues = "https://github.com/stuartellis/tfg/issues"
Source = "https://github.com/stuartellis/tfg"

## Build System ##

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

## Tools ##

[tool.mypy]
disallow_untyped_defs = true
follow_imports = "normal"
pretty = true
show_column_numbers = true
warn_no_return = false
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pip-tools]
allow_unsafe = true # Default behavior in future pip-tools releases
generate-hashes = true
strip_extras = true # Default behavior in future pip-tools releases

[tool.pytest.ini_options]
addopts = "--cov=tfg --cov-report term"

[tool.ruff]
src = ["src", "tests"]
target-version = "py310"
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["ALL"]

# Disable rules for compatibility with ruff formatter:
# https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
ignore = [
  "COM812", "COM819",
  "D206", "D300",
  "E111", "E114", "E117",
  "ISC001", "ISC002",
  "Q000", "Q001", "Q002", "Q003",
  "W191"
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"./src/tfg/cli.py" = [
    # T201 forbids print()
    "T201",
]
"./tests/test_*.py" = [
    # S101 forbids assert()
    "S101",
]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
